# SANDRA

./: .gitignore  README.md
sandra-be/: .env  Cargo.toml
sandra-be/TEMP_TEST/: app.js  index.html  newapp.js  newindex.html
sandra-be/src/: main.rs
sandra-be/src/utils/: auth.rs  db_service.rs  dhcp.rs  http_service.rs  mod.rs  models.rs  rtsp_to_webrtc.rs  sub_events.rs  ws_service.rs
sandra-fe/: app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
sandra-fe/.expo/models/: index.ts
sandra-fe/.expo/types/: router.d.ts
sandra-fe/.gluestack/: config-32044.js  config-42706.js  config-97406.js
sandra-fe/app/: _layout.tsx
sandra-fe/app-example/: _layout.tsx
sandra-fe/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
sandra-fe/app/(tabs)/temp/: me.tsx
sandra-fe/components/: Alerts.tsx  AuthView.tsx  LiveFeedSelection.tsx  MediaViewer.tsx
sandra-fe/context/: index.js
sandra-fe/models/: user.ts
sandra-fe/utils/: api.ts  auth.ts  camera.ts  ws.ts
