[package]
name = "sandra-be"
version = "0.0.1"
edition = "2021"

[dependencies]
derivative = "2.2.0"
onvif = { git = "https://github.com/jwolfgram/onvif-rs", branch = "fix-reolink-header-event" }
chrono = "0.4.19"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1"
xml-rs = "=0.8.3"
xmltree = "0.10.2"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
schema = { git = "https://github.com/jwolfgram/onvif-rs", branch = "fix-reolink-header-event", default-features = false, features = ["analytics", "devicemgmt", "event", "media", "ptz"] }
b_2 = {git = "https://github.com/jwolfgram/onvif-rs", branch = "fix-reolink-header-event" }
url = "2.5.2"
actix-web = "4"
actix-files = "0.6.6"
actix = "0.13.5"
serde = "1.0.204"
serde_json = "1.0.120"
actix-web-lab = "0.20.2"
ed25519-compact = "2.1.1"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"]}
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
strum_macros = "0.26.4"
mongodb = {version = "3.0.1"}
futures = "0.3.30"
actix-cors = "0.7.0"
env_logger = "0.11.3"
uuid = "1.10.0"
base64 = "0.22.1"
lazy_static = "1.5.0"

