[package]
name = "sandra-be"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
derivative = "2.2.0"
onvif = { git = "https://github.com/jwolfgram/onvif-rs", branch = "fix-reolink-header-event" }
chrono = "0.4.19"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1"
xml-rs = "=0.8.3"
xmltree = "0.10.2"
xsd-macro-utils = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
xsd-types = { git = "https://github.com/lumeohq/xsd-parser-rs", rev = "7f3d433" }
onvif_utils = { package = "schema", git = "https://github.com/jwolfgram/onvif-rs", branch = "fix-reolink-header-event", default-features = false, features = [
  "analytics",
  "devicemgmt",
  "event",
  "media",
  "ptz",
] }
b_2 = { git = "https://github.com/jwolfgram/onvif-rs", branch = "fix-reolink-header-event" }
url = "2.5.2"
actix-web = "4.9.0"
actix-files = "0.6.6"
mongodb = { version = "3.0.1" }
futures = "0.3.30"
actix-cors = "0.7.0"
env_logger = "0.11.3"
uuid = { version = "1.11.0", features = ["v4"] }
base64 = "0.22.1"
lazy_static = "1.5.0"
futures-util = "0.3.30"
local-ip-address = "0.6.1"
actix-ws = "0.3.0"
retina = "0.4.8"
pnet = { git = "https://github.com/libpnet/libpnet" }
dhcp4r = { git = "https://github.com/pj1234678/RustyDHCP", version = "0.2.3" }
reqwest = "0.12.7"
rust_jwt_actix = { git = "https://github.com/jwolfgram/rust_jwt_actix", branch = "main" }
#rust_jwt_actix = { path = "../../rust_jwt_actix" }
ctrlc = "3.4.5"
dotenv = "0.15.0"
